--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site
 title:              'simoexpo.dev'
-description:        'Just some random thoughts :D'
+description:        'Just some random thoughts'
 locale:             'en_US'
 version:            '0.1'
 
